fixing horizontal scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,9 @@
 /* Initial setting */
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 a {
 	transition: 0.5s all;
   -webkit-transition: 0.5s all;
